app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mstream
spec:
  selector:
    app: mstream
  ports:
    - port: 3000
      targetPort: 3000
